Changes for release v18_0. (#812)